[tool.poetry]
name = "deept"
version = "0.1.0"
description = ""
authors = ["Felix <felix.schmidt3@rwth-aachen.de>"]

[tool.poetry.dependencies]
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
python = "^3.11.4"
numpy = "^1.25.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"