[tool.poetry]
name = "deept"
version = "0.1.0"
description = ""
authors = ["Felix <felix.schmidt3@rwth-aachen.de>"]

[tool.poetry.dependencies]
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl"}
python = ">=3.11.6,<3.13"
numpy = "^1.25.0"
pyyaml = "^6.0"
webdataset = "^0.2.48"
torchdata = "^0.6.1"
tensordict = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"