[tool.poetry]
name = "deept"
version = "0.1.0"
description = ""
authors = ["Felix Schmidt <felix.schmidt3@rwth-aachen.de>"]

[tool.poetry.dependencies]
torch = "^2.0.1"
python = "^3.11.6"
numpy = "^1.25.0"
pyyaml = "^6.0"
tensordict = "^0.1.2"
wandb = "^0.18.7"
cool-config = {git = "https://github.com/flixxox/yaml-config-mngr"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"